--- a/smacofHO/smacofHO.Rmd
+++ b/smacofHO/smacofHO.Rmd
@@ -46,33 +46,26 @@ and smacofExamples.
 
 # Simultaneous Non-Metric Unfolding
 
-If we have data where the same objects give preference
-judgments over multiple domains, or over the same domain on multiple occasions, or over the same domain under different experimental conditions,
-then we can use the stress loss function
+* There are $m$ *variables*. 
+* Variable $j$ has $k_j>1$ *categories*.
+* There are $n$ *objects*.
+* Each object defines a partial order over the categories of all variables.
+
+In this chapter we minimize the stress loss function
 \begin{equation}
 \sigma(X,Y_1,\cdots,Y_m):=\sum_{j=1}^m\sum_{i=1}^n\min_{\hat d_i^j\in\Delta_i^j}\sum_{l=1}^{k_j}w_{il}^j(\hat d_{il}^j-d(x_i,y_l^j))^2
 (\#eq:snmu)
 \end{equation}
 Note that for each object and variable there are different sets of transformations $\Delta_j$
-and for each variable there different matrices of column scores $Y_j$, but there is only a single matrix of row scores $X$.
+and for each variable there different matrices of column scores $Y_j$, but there is only a single matrix of row scores $X$. Also note that index $j$, for variables,
+is sometimes used as a subscript and sometimes as a superscript, depending on what
+looks best.
 
 If the $\Delta_i^j$ contain zero, then the unconstrained minimum of \@ref(eq:snmu)
 is clearly zero. Collapsing all $x_i$ and all $y_l^j$ into a single point makes all distances zero, and thus makes stress zero. Some sort of normalization of either $X$ and/or the $Y_j$ is needed to prevent this trivial solution.
 
-There is a extensive literature in the case of non-metric unfolding on preveting trivial solutions. Initially  @roskam_68 and @kruskal_carroll_69 tried to use implicit normalization of stress, which in our context means that
-each component of \@ref(eq:snmu)
-is given a numerator
-\begin{equation}
-\sigma(X,Y_1,\cdots,Y_m):=\sum_{j=1}^m\sum_{i=1}^n\frac{\min_{\hat d_i^j\in\Delta_i^j}\sum_{l=1}^{k_j}w_{il}^j(\hat d_{il}^j-d(x_i,y_l^j))^2}{\min_{\hat d_{ij}}\sum_{l=1}^{k_j}w_{il}^j(\hat d_{ij}-d(x_i,y_l^j))^2}
-(\#eq:snmuin)
-\end{equation}
-This is supposed to prevent solutions with 
-all $d(x_i,y_l^j)$ are equal within a row of 
-the 
-
-
-In fact, it is easy to see that a minimum of zero is also possible in the situation where the $\Delta_i^j$ have the
-subset of all constant vectors (or all non-negative constant vectors). Collapse all
+In fact, it is easy to see that a minimum of zero is also possible in the situation where the $\Delta_i^j$ contain the
+set of all constant vectors (or all non-negative constant vectors). Collapse all
 $x_i$ into a single point, and place all $y_l^j$ on a sphere around this point.
 Or collapse all $y_l^j$ and put the $x_i$ on a sphere. This makes all $d(x_i,y_l^j)$
 equal and thus makes stress zero.
@@ -81,55 +74,56 @@ equal and thus makes stress zero.
 
 The Gifi System (@gifi_B_90, @michailidis_deleeuw_A_98, @deleeuw_mair_A_09a) presents non-linear or non-metric versions of the classical linear multivariate analysis techniques (regression, analysis of variance, canonical analysis, discriminant analysis, principal component analysis) as special cases of Homogeneity Analysis, also known as Multiple Correspondence Analysis.
 
-We give a somewhat non-standard introduction to homogeneity analysis here, to highlight the
-similarities with unfolding and the techniques we will present later on in this paper.
+In this section we present homogeneity analysis as a special case of 
+minimizing the loss function \@ref(eq:snmu). 
 
-The data are a number of indicator matrices $G_1,\cdots,G_s$. Indicator matrices are binary matrices, with rows that add up to one. They are
+The data are a number of indicator matrices $G_1,\cdots,G_m$. Indicator matrices are binary matrices, with rows that add up to one. They are
 used to code categorical variables. Rows corresponds with objects
-(or objects), column with the categories (or levels) of a variable.
-An element $g_{ij}$ is one in row if object $i$ is in category $j$,
+(or objects), columns with the categories (or levels) of a variable.
+An element $g_{il}$ is one in row if object $i$ is in category $l$,
 and all other elements in row $i$ are zero.
 
 Homogeneity analysis makes a joint maps in $p$ dimensions of objects
 and categories (both represented as points) in such a way that category points are close to the points for the objects in the category. And, vice versa, objects are close to the category points that they score in.
+
 If there is only one variable then it is trivial to make such a 
 homogeneous map. We just make sure the object points coincide with
-their category points. But there are $s>1$ indicator matrices, corresponding with $s$ categorical variables, and the solution is a compromise trying to achieve homogeneity as well as possible for all variables simultaneously.
+their category points. But there are $j>1$ indicator matrices, corresponding with $m$ categorical variables, and the solution is a compromise trying to achieve homogeneity as well as possible for all variables simultaneously.
 
-Let us use loss function \@ref(eq:snmu) to captures loss of homogeneity in
-the sense discussed above.
-The sets $\Delta_i^r$ are defined in such a way that $\hat d_{il}^j$ is zero if $i$ is in category $l$ of 
+In loss function \@ref(eq:snmu) applied to homogeneity analysis
+the sets $\Delta_i^j$ are defined in such a way that $\hat d_{il}^j$ is zero if $i$ is in category $l$ of 
 variable $j$. There are no constraints on the other $\hat d$'s in row $i$
-of variable $j$. Thus for zero loss we want an object to coincide with all $m$ categories it is in. Under this definition of the $\Delta_i^r$ we have
-
-$$
+of variable $j$. Thus for zero loss we want an object to coincide with all $m$ categories it is in. Under this definition of the $\Delta_i^j$ we have
+\begin{equation}
 \min_{\hat d_i^j\in\Delta_i^j}\sum_{l=1}^{k_j}w_{il}^j(\hat d_{il}^j-d(x_i,y_l^j))^2=w_{il(i,j)}^jd(x_i,y_{l(i,j)}^j)^2
-$$
-where the $l(i,j)$ on the right is the index of the category of variable $j$ that object $i$ is in. In 
-homogeneity analysis we actually assume that
-for each $i$ and $j$ $w_{il}^j$ is the same for all 
-$l$, so that we can simply use $w_{ij}$.
+(\#eq:homsnmu)
+\end{equation}
+where the $l(i,j)$ on the right is the index of the category of variable $j$ that object $i$ is in. 
 
-
-Using indicators we can write loss function ... as
-$$
+Using indicators we can write loss function \@ref(eq:homsnmu) as
+\begin{equation}
 \sigma(X,Y_1,\cdots,Y_m)=
 \sum_{j=1}^m\text{tr}\ (X-G_jY_j)'W_j(X-G_jY_j),
-$$
-In homogeneoty analysis we minimize .. using the
-explicit normalization $X'W_\star X=I$. The solution
-is
+(\#eq:matsnmu)
+\end{equation}
+The $W_j$ are diagonal matrices with
+\begin{equation}
+w_i^j:=w_{il(i,j)}=\sum_{l=1}^{k_j}g^j_{il}w^j_{il}.
+(\#eq:whomdef)
+\end{equation}
+
+In homogeneity analysis we minimize \@ref(eq:matsnmu) using the
+explicit normalization $X'W_\star X=I$, where $W_\star$ is the
+sum of the $W_j$. The solution is given by the singular value
+equations
 \begin{align}
-X\Lambda&=W_\star^{-1}\sum_{j=1}^m W_jG_jY_j,\\
-Y_j&=(G_j'W_jG_j)^{-1}G_j'W_jX
+X\Lambda&=W_\star^{-1}\sum_{j=1}^m W_jG_jY_j,(\#eq:homsvd1)\\
+Y_j&=(G_j'W_jG_j)^{-1}G_j'W_jX,(\#eq:homsvd2)
 \end{align}
-where $\Lambda$ is a symmetric matrix of Lagrange
-multipliers.
+where $\Lambda$ is a symmetric matrix of Lagrange multipliers.
 
 
 # Loss Function
-
-## The Unconstrained Case
 
 Now consider the closely related problem in which we do not require,
 as in homogeneity analysis, that 
@@ -137,7 +131,6 @@ $$
 \hat d^j_{il(i,j)}=0
 $$
 but we impose the weaker condition that $\hat d^j_{il(i,j)}$ is less than or equal to all $\hat d^j_{il}$ in row $i$. 
-
 
 In homogeneity analysis the geometric interpretation of loss is that we
 want objects to coincide with the categories they score in (for all variables). The geometric interpretation of loss function ... is that we want 
@@ -150,6 +143,10 @@ $\ell$ than to any other category of variable $r$. The loss function
 they score in (for all variables). It is sufficient for contiguity that the
 stars in the star plot are disjoint ? Also that the convex hulls of the
 object points are disjoint ?
+
+## The Unconstrained Case
+
+ALS
 
 Minimizing ... over the rows $\delta_i^r$ is a monotone regression for a simple tree order. This is easily handled by using Kruskal's primary approach
 to ties (@kruskal_64a, @kruskal_64b, @deleeuw_A_77).
@@ -283,18 +280,14 @@ over $X$.
 
 ## Normalization of X
 
-Constraint either (weak)
-$$
-\text{tr}\ X'V_{11}^\star X = 1
-$$
-or (strong)
+Constraint 
 $$
 X'V_{11}^\star X = I
 $$
 
 ## The Unweighted Case
 
-In the  unweighted case we have $V_{11}^r=k_jI$, $V_{22}^r=nI$, and
+In the unweighted case we have $V_{11}^r=k_jI$, $V_{22}^r=nI$, and
 $V_{12}^r=-E_{n\times k_j}$. Thus
 $V_{1\mid2}^r=k_jJ_n$ and $V_{1\mid 2}^\star=k_\star J_n$
 with $J_n=I_n-n^{-1}E_{n\times n}$, the centering matrix of order $n.
@@ -356,5 +349,28 @@ $W_jX-WY=P$ or $X=W_j^{-1}(P+WY)$. Substitute in $W_cY-W'X=Q$
 to get $W_cY-W'W_j^{-1}(P+WY)=Q$ or $(W_c-W'W_j^{-1}W)Y=Q+W'W_j^{-1}P$.
 
 Note that $W_c-W'W_j^{-1}W$ is doubly-centered and $Q+W'W_j^{-1}P$ is column-centered.
+
+# Convergence and Degeneracy
+
+# Utilities
+
+## Object Plot Function
+
+## Category Plots Function
+
+## Joint Plot Function
+
+# Examples
+
+Presenting examples runs into some difficulties. 
+
+## Cetacea
+
+## Senate
+
+## GALO
+
+
+
 
 # References
