--- a/smacofHO/smacofHO.tex
+++ b/smacofHO/smacofHO.tex
@@ -156,7 +156,7 @@
 \title{Smacof at 50: A Manual\\
 Part 8: Homogeneity Analysis with Smacof}
 \author{Jan de Leeuw - University of California Los Angeles}
-\date{Started April 13 2024, Version of June 10, 2024}
+\date{Started April 13 2024, Version of June 14, 2024}
 
 \begin{document}
 \maketitle
@@ -175,7 +175,7 @@ appreciated, but is not required. The files can be found at
 \url{https://github.com/deleeuw} in the repositories smacofCode, smacofManual,
 and smacofExamples.
 
-\section{Simultaneous Non-Metric Unfolding}\label{simultaneous-non-metric-unfolding}
+\section{Simultaneous Non-Metric Unfolding}\label{snmu}
 
 \begin{itemize}
 \tightlist
@@ -186,69 +186,71 @@ and smacofExamples.
 \item
   There are \(n\) \emph{objects}.
 \item
-  Each object defines a partial order over the categories of all variables.
+  Each object defines a partial order over the categories of each variable.
 \end{itemize}
 
-In this chapter we minimize the stress loss function
+The problem we analyze in this chapter is to minimize the stress loss function
 \begin{equation}
 \sigma(X,Y_1,\cdots,Y_m):=\sum_{j=1}^m\sum_{i=1}^n\min_{\hat d_i^j\in\Delta_i^j}\sum_{l=1}^{k_j}w_{il}^j(\hat d_{il}^j-d(x_i,y_l^j))^2
 \label{eq:snmu}
 \end{equation}
 Note that for each object and variable there are different sets of transformations \(\Delta_j\)
-and for each variable there different matrices of column scores \(Y_j\), but there is only a single matrix of row scores \(X\). Also note that index \(j\), for variables,
-is sometimes used as a subscript and sometimes as a superscript, depending on what
-looks best.
+and for each variable there different matrices of \emph{category scores} \(Y_j\), but there is only a single matrix of \emph{object scores} \(X\). Also note that index \(j\), for variables, is sometimes used as a subscript and sometimes as a superscript, depending on what looks best.
 
-If the \(\Delta_i^j\) contain zero, then the unconstrained minimum of \eqref{eq:snmu}
-is clearly zero. Collapsing all \(x_i\) and all \(y_l^j\) into a single point makes all distances zero, and thus makes stress zero. Some sort of normalization of either \(X\) and/or the \(Y_j\) is needed to prevent this trivial solution.
-
+If the \(\Delta_i^j\) contain the zero vector, then the unconstrained minimum of \eqref{eq:snmu} iszero. Collapsing all \(x_i\) and all \(y_l^j\) into a single point makes all distances zero, and thus makes stress zero.
 In fact, it is easy to see that a minimum of zero is also possible in the situation where the \(\Delta_i^j\) contain the
 set of all constant vectors (or all non-negative constant vectors). Collapse all
-\(x_i\) into a single point, and place all \(y_l^j\) on a sphere around this point.
-Or collapse all \(y_l^j\) and put the \(x_i\) on a sphere. This makes all \(d(x_i,y_l^j)\)
-equal and thus makes stress zero.
+\(x_i\) into a single point, and place all \(y_l^j\) for variable \(j\) on a sphere around this point. There can be different spheres for different variables. This makes all \(d(x_i,y_l^j)\) equal and thus makes stress zero.
+Some comstraints on \(X\) and/or the \(Y_j\) is needed to prevent this trivial solution.
 
-\subsection{Homogeneity Analysis}\label{homogeneity-analysis}
+\section{Homogeneity Analysis}\label{hom}
 
-The Gifi System (Gifi (1990), Michailidis and De Leeuw (1998), De Leeuw and Mair (2009)) presents non-linear or non-metric versions of the classical linear multivariate analysis techniques (regression, analysis of variance, canonical analysis, discriminant analysis, principal component analysis) as special cases of Homogeneity Analysis, also known as Multiple Correspondence Analysis.
+The Gifi System (Gifi (1990), Michailidis and De Leeuw (1998), De Leeuw and Mair (2009)) implements non-linear or non-metric versions of the classical linear multivariate analysis techniques (regression, analysis of variance, canonical analysis, discriminant analysis, principal component analysis) as special cases of \emph{Homogeneity Analysis}, better known as \emph{Multiple Correspondence Analysis}.
 
-In this section we present homogeneity analysis as a special case of
-minimizing the loss function \eqref{eq:snmu}.
-
-The data are a number of indicator matrices \(G_1,\cdots,G_m\). Indicator matrices are binary matrices, with rows that add up to one. They are
+In this section we present homogeneity analysis as a technique for
+minimizing the loss function \eqref{eq:snmu} when the data are \(n\times k_j\) \emph{indicator matrices} \(G_j\), with \(j=1,\cdots,M\). This is a non-standard
+presentation, because usually homogeneity analysis is related to
+principal component analysis, and not to multidimensional scaling
+(see, for example, De Leeuw (2014) or De Leeuw (1923)).
+Indicator matrices are binary matrices, with rows that add up to one or to zero.
+Thus each row has either a single elements equal to one and the rest zeroes,
+or all elements equal to zero. Indicator matrices are
 used to code categorical variables. Rows corresponds with objects
-(or objects), columns with the categories (or levels) of a variable.
-An element \(g_{il}\) is one in row if object \(i\) is in category \(l\),
-and all other elements in row \(i\) are zero.
+(or individuals), columns with the categories (or levels) of a variable.
+Element \(g_{il}^j\) is one if object \(i\) is in category \(l\) of variable \(j\),
+and all other elements in row \(i\) are zero. If an object is \emph{missing} on
+variable \(j\) then the whole row is zero.
 
-Homogeneity analysis makes a joint maps in \(p\) dimensions of objects
-and categories (both represented as points) in such a way that category points are close to the points for the objects in the category. And, vice versa, objects are close to the category points that they score in.
-
-If there is only one variable then it is trivial to make such a
+Homogeneity analysis makes joint maps in \(p\) dimensions of objects
+and categories, both represented as points. A joint map for variable \(j\)
+has \(n\) object points \(x_i\) and \(k_j\) category points \(y^j_{il}\).
+In a homogeneous solution the object points are close to the points of the categories that the objects score in, i.e, to those \(y^j_{il}\) for which \(g^j_{il}=1\).
+If there is only one variable then it is trivial to make a perfectly
 homogeneous map. We just make sure the object points coincide with
-their category points. But there are \(j>1\) indicator matrices, corresponding with \(m\) categorical variables, and the solution is a compromise trying to achieve homogeneity as well as possible for all variables simultaneously.
+their category points. But there are \(j>1\) indicator matrices, corresponding with \(m\) categorical variables, and there is only a single set of object scores. The solution is a compromise trying to achieve as much homogeneity as possible for all variables simultaneously.
 
 In loss function \eqref{eq:snmu} applied to homogeneity analysis
 the sets \(\Delta_i^j\) are defined in such a way that \(\hat d_{il}^j\) is zero if \(i\) is in category \(l\) of
 variable \(j\). There are no constraints on the other \(\hat d\)'s in row \(i\)
-of variable \(j\). Thus for zero loss we want an object to coincide with all \(m\) categories it is in. Under this definition of the \(\Delta_i^j\) we have
+of variable \(j\). Thus for zero loss we want an object to coincide with all \(m\) categories it is in. With this definition of the \(\Delta_i^j\) we have
 \begin{equation}
-\min_{\hat d_i^j\in\Delta_i^j}\sum_{l=1}^{k_j}w_{il}^j(\hat d_{il}^j-d(x_i,y_l^j))^2=w_{il(i,j)}^jd(x_i,y_{l(i,j)}^j)^2
+\min_{\hat d_i^j\in\Delta_i^j}\sum_{l=1}^{k_j}w_{il}^j(\hat d_{il}^j-d(x_i,y_l^j))^2=w_{ij}d_{ij}^2(X,Y),
 \label{eq:homsnmu}
 \end{equation}
-where the \(l(i,j)\) on the right is the index of the category of variable \(j\) that object \(i\) is in.
+where
+\begin{align}
+d_{ij}(X,Y)&=\sum_{l=1}^{k_j}g_{il}^jd(x_i,y^j_l),\label{eq:dred}\\
+w_{ij}&=\sum_{l=1}^{k_j}g_{il}^jw^j_{il}.\label{eq:wred}
+\end{align}
 
-Using indicators we can write loss function \eqref{eq:homsnmu} as
+Using indicator matrices we can write loss function \eqref{eq:homsnmu} as
 \begin{equation}
 \sigma(X,Y_1,\cdots,Y_m)=
 \sum_{j=1}^m\text{tr}\ (X-G_jY_j)'W_j(X-G_jY_j),
 \label{eq:matsnmu}
 \end{equation}
-The \(W_j\) are diagonal matrices with
-\begin{equation}
-w_i^j:=w_{il(i,j)}=\sum_{l=1}^{k_j}g^j_{il}w^j_{il}.
-\label{eq:whomdef}
-\end{equation}
+The \(W_j\) are diagonal matrices with the \(w_{ij}\) from \eqref{eq:wred}
+on the diagonal.
 
 In homogeneity analysis we minimize \eqref{eq:matsnmu} using the
 explicit normalization \(X'W_\star X=I\), where \(W_\star\) is the
@@ -258,159 +260,199 @@ equations
 X\Lambda&=W_\star^{-1}\sum_{j=1}^m W_jG_jY_j,\label{eq:homsvd1}\\
 Y_j&=(G_j'W_jG_j)^{-1}G_j'W_jX,\label{eq:homsvd2}
 \end{align}
-where \(\Lambda\) is a symmetric matrix of Lagrange multipliers.
+where \(\Lambda\) is a symmetric matrix of Lagrange multipliers. Remember that in addition we require \(X'W_\star X=I\).
+
+In homals (Gifi (1980), De Leeuw and Mair (2009)) alternating least squares is used
+to solve the equations \eqref{eq:homsvd1} and \eqref{eq:homsvd2}. We start with
+some initial \(X\), then compute the corresponding \(Y_j\) using \eqref{eq:homsvd2},
+then for these new \(Y_j\) we compute a new corresponding \(X\) from \eqref{eq:homsvd1},
+and so on. Computations are efficient, because only diagonal matrices need to
+be inverted and matrix multiplication with an indicator matrix is not really multiplication but simply selection of a particular row or column. Alternating least squares becomes reciprocal averaging.
+
+Alternative methods of computation (and interpretation) are possible if we
+substitute \eqref{eq:homsvd2} in \eqref{eq:homsvd1} to eliminate the \(Y_j\)
+and obtain an equation in \(X\) only. This gives
+\begin{equation}
+W_\star X\Lambda=\sum_{j=1}^m W_jG_j(G_j'W_jG_j)^{-1}G_j'W_jX,
+\label{eq:geneigx}
+\end{equation}
+which is a generalized eigenvalue equation for \(X\). If we substitute \eqref{eq:homsvd1}
+in \eqref{eq:homsvd2} we obtain generalized eigenvalue equations for \(Y\).
+\begin{equation}
+(G_j'W_jG_j)Y_j\Lambda=\sum_{h=1}^m G_j'W_jW_\star^{-1}W_hG_hY_h.
+\label{eq:geneigy}
+\end{equation}
+If \(k_\star\), the sum of the \(k_j\), is not too large then finding the \(p\) largest non-trivial eigenvalues with corresponding eigenvectors from \eqref{eq:geneigy} may be computationally efficient. The largest ``trivial'' eigenvalue is always equal to one, no matter what the \(G_j\) and \(W_j\) are, and we can safely ignore it. The trivial solutions mentioned in section \ref{snmu} correspond with this largest eigenvalue.
+
+Homogeneity analysis can be most naturally introduced using the concept of a \emph{star plot}. For variable \(j\) we plot \(k_j\) category points and \(n\) object
+points in a single joint plot. We then draw a line from each category point to the object points of the objects in that category. This creates \(k_j\) groups of
+lines and points in \(\mathbb{R}^p\), and each of these groups is called a \emph{star}.
+The sum of squares of the line lengths of a star is the loss of homogeneity for category \(l\) of variable \(j\), and the total sum of squares of all line lengths in the \(k_j\) stars is the loss \eqref{eq:matsnmu} for variable \(j\). Homogeneity analysis chooses \(X\) and the \(Y_j\) such that \(X\) is normalized by \(X'W_\star X=I\) and the stars are as small or as compact as possible, measured by the squared line lengths. For given \(X\) the stars are as small as possible by choosing the category points \(Y_j\) as the centroids of the object points in the category. That explains the use of the word star, because now the stars really look like stars. Thus, given the choice of the \(Y_j\) as centroids, we can also say that homogeneity analysis quantifies the \(n\) objcets in such a way that the resulting stars are as small as possible.
 
 \section{Loss Function}\label{loss-function}
 
-Now consider the closely related problem in which we do not require,
+The smacofHO technique solves the closely related problem in which we do not require,
 as in homogeneity analysis, that
-\[
-\hat d^j_{il(i,j)}=0
-\]
-but we impose the weaker condition that \(\hat d^j_{il(i,j)}\) is less than or equal to all \(\hat d^j_{il}\) in row \(i\).
-
+\begin{subequations}
+\begin{equation}
+\sum_{l=1}^{k_j}g^j_{il}\hat d^j_{il}=0
+\end{equation}
+for all $i$ and $j$, but we impose the weaker condition that for all $i$ and $j$
+\begin{equation}
+\sum_{l=1}^{k_j}g^j_{il}\hat d^j_{il}\leq \hat d^j_{i\nu}
+\end{equation}
+\end{subequations}
+for all \(\nu=1,\cdots,k_j\).
 In homogeneity analysis the geometric interpretation of loss is that we
-want objects to coincide with the categories they score in (for all variables). The geometric interpretation of loss function \ldots{} is that we want
+want objects to coincide with all categories they score in. The geometric interpretation of loss function \ldots{} is that we want
 objects to be closer to the categories they score in than to the categories
-they do not score in (for all variables). The plot of the the \(k_j\) categories of
-variable \(r\) defines \(k_j\) Voronoi regions. The Voronoi region of
-category \(\ell\) is the polyhedral convex set of all points closer to category
-\(\ell\) than to any other category of variable \(r\). The loss function
-\ldots{} vanishes if the \(x_i\) are all in the Voronoi regions of the categories
-they score in (for all variables). It is sufficient for contiguity that the
-stars in the star plot are disjoint ? Also that the convex hulls of the
-object points are disjoint ?
+they do not score in.
+
+This can be formalized using the notion of \emph{Voronoi regions}. The Voronoi region of
+category \(l\) of variable \(j\) is the polyhedral convex set of all points of \(\mathbb{R}^p\) closer to category \(l\) than to any other category of variable \(j\). The plot of the the \(k_j\) categories of variable \(j\) defines \(k_j\) Voronoi regions that
+partition \(\mathbb{R}^p\).
+
+Loss function \ldots{} with \(\Delta\) defined by \ldots{} vanishes if for each variable all \(x_i\) are in the Voronoi regions of the categories they score in. This condition implies, by the way, that the interiors of the \(k_j\) convex hulls of the \(x_i\) in a given category are disjoint, and the point clouds can consequently be weakly separated by hyperplanes. Since the category points themselves are in their own Voronoi region the convex hulls of the stars are also disjoint.
+
+\subsection{The Guttman Transform}\label{the-guttman-transform}
+
+The general majorization theory for MDS with restrictions calls for updates
+in two steps. In the first step we compute the Guttman transform of the current configuration, and in the second step we project the Guttman transform on the
+set of constrained configurations.
+
+Configuration updates are alternated with updates of the \(\hat D_j\). Minimizing
+loss \ldots{} over the \(\hat d_i^j\) is a monotone regression problem for a simple tree
+order. This is easily solved by using Kruskal's primary approach to ties
+(Kruskal (1964a), Kruskal (1964b), De Leeuw (1977)).
+
+\subsection{Six analyses}\label{six-analyses}
+
+There are three options for updating the \(Y_j\).
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  No further constraints on the \(Y_j\).
+\item
+  The \(Y_j\) are centroids, i.e.~\(Y_j=(G_j'W_jG_j)^{-1}G_j'W_jX\).
+\item
+  The \(Y_j\) have rank one, i.e.~\(Y_j=q_ja_j'\).
+\end{enumerate}
+
+There are two options for updating \(X\). Note that \(X\) is always
+constrained to be the same for all variables, i.e.~\(X_j=X\).
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  No further constraints on \(X\).
+\item
+  \(X\) is normalized by \(X'W_\star X=I\)
+\end{enumerate}
+
+Note that the centroid constraint on the \(Y_j\) and the normalization
+constraint on \(X\) are inspired by homogeneity analysis. The rank-one
+constraint on \(Y_j\) is taken from the Gifi system, where it serves
+to make homogeneity analysis into a form of non-linear principal
+component analysis.
 
 \subsection{The Unconstrained Case}\label{the-unconstrained-case}
 
-ALS
+Suppose there are no constraints on the \(Y_j\) and on \(X\) (except for the
+constraint \(X_j=X\)). The smacof iterations, or Guttman transforms, more or less ignore the fact that we are dealing with a rectangular matrix and use the weights to transform the problem into a symmetric one (as in Heiser and De Leeuw (1979)).
 
-Minimizing \ldots{} over the rows \(\delta_i^r\) is a monotone regression for a simple tree order. This is easily handled by using Kruskal's primary approach
-to ties (Kruskal (1964a), Kruskal (1964b), De Leeuw (1977)).
+The loss function is
+\[
+\sigma(Z_1,\cdots,Z_m)=\sum_{j=1}^m\sum_{i=1}^{n_j}\sum_{k=1}^{n_j}w_{ik}^j(\hat d_{ik}^j-d_{ik}(Z_j))^2,
+\]
+with \(n_j:=n+k_j\) and with \(Z_j\) the \(n_j\times p\) matrix that stacks \(X\) on top of
+\(Y_j\). The \(w_{ik}^j\) are zero for the diagonal \(n\times n\) and the diagonal
+\(k_j\times k_j\) block.
 
-In stage 2 we do one or more metric smacof iterations for given \(\Delta_j\)
-to decrease the loss. These smacof iterations, or Guttman transforms, more or less ignore the fact that we are dealing with a rectangular matrix and use the weights to transform the problem into a symmetric one (as in Heiser and De Leeuw (1979)).
-
-Thus for stage two purposes the loss function is
-\[
-\sigma(Z_1,\cdots,Z_m)=\sum_{j=1}^m\sum_{i=1}^{N_j}\sum_{j=1}^{N_j}w_{ij}^r(\delta_{ij}^r-d_{ij}(Z_j))^2,
-\]
-with \(N_j:=n+k_j\) and
-
-\[
-Z_j:=\kbordermatrix{
-\mbox{\ }&p\\
-n&X\\
-k_j&Y_j}.
-\]
-
-The weights in \(W_j\) are now zero for the two diagonal blocks.
-
-\[
-g_i^r:=\kbordermatrix{\mbox{\ }&\ \\n&e_i\\k_j&0}.
-\]
-\[
-h_\ell^r:=\kbordermatrix{\mbox{\ }&\ \\n&0\\k_j&e_\ell}
-\]
-so that \(x_i=Z_j'g_i^r\) and \(y_\ell^r=Z_j'h_\ell^r\). It follows that
-\[
-d^2(x_i,y_\ell^r)=\text{tr}\ Z_j'A^r_{i\ell}Z_j^{\ }
-\]
-where \(A_{i\ell}^r\), of order \(n+k_j\), is the rank-one, positive semi-definite, doubly centered matrix
-\[
-A_{i\ell}^r:=(g_i^r-h_\ell^r)(g_i^r-h_\ell^r)'
-\]
-It further follows that
-\[
-\sum_{i=1}^n\sum_{\ell=1}^{k_j}w_{il}^rd^2(x_i,y_\ell^r)=\text{tr}\ Z_j'V_jZ_j,
-\]
-where
-\[
-V_j:=\sum_{i=1}^n\sum_{\ell=1}^{k_j}w_{il}^rA^r_{i\ell},
-\]
-so that \(V_j\) has the shape
-\[
-V_j=\kbordermatrix{&n&k_j\\
-n&\ddots&\Box\\
-k_j&\Box&\ddots}
-\]
-with \(-W_j\) in the off-diagonal block, while the two diagonal
-blocks are diagonal matrices with the row and column sums of \(W_j\).
-
-In a similar way we define \(B_j(Z_j)\), with the same shape as \(V_j\), and with
-\[
-B(Z_j)=\sum_{i=1}^n\sum_{\ell=1}^{k_j}w_{i\ell}^r\frac{\delta_{i\ell}^r }{d_{i\ell}(Z_j)}A^r_{i\ell}
-\]
-
-\[
-\sigma(Z_1,\cdots,Z_m)=\sum_{j=1}^m\{\eta_j^2-2\text{tr}\ Z_j'B(Z_j)Z_j+Z_j'V_jZ_j\}
-\]
-with
-\[
-\eta_j^2:=\sum_{i=1}^{N_j}\sum_{j=1}^{N_j}w_{ij}^r\{\delta_{ij}^r\}^2
-\]
-Define the Guttman transforms of \(Z_j\) as
-\[
-\tilde Z_j=V_j^+B(Z_j)Z_j
-\]
-Then
-\[
-\sigma_j(Z):=\eta_j^2-2\text{tr}\ Z_j'B(Z_j)Z_j+Z_j'V_jZ_j=\eta_j^2-\eta^2(\tilde Z_j)+\text{tr}\ (Z_j-\tilde Z_j)'V_j(Z_j-\tilde Z_j)
-\]
-If \(Z_j^{(k)}\) is \(Z_j\) at iteration \(k\) then
-\[
-\text{tr}\ Z_j'B(Z_j)Z_j\geq\text{tr}\ Z_j'B(Z_j^{(k)})Z_j^{(k)}=\text{tr}\ Z_j'V_j\tilde Z_j^{(k)}.
-\]
-Thus
-\[
-\sigma_j(Z)\leq\eta_j^2-\eta^2(\tilde Z_j^{(k)})+\text{tr}\ (Z_j-\tilde Z_j^{(k)})'V_j(Z_j-\tilde Z_j^{(k)})
-\]
-It follows that in iteration \(k+1\) we must minimize
-\[
-\omega(Z_1,\cdots,Z_s):=\sum_{j=1}^m\text{tr}\ (Z_j-\tilde Z_j^{(k)})'V_j(Z_j-\tilde Z_j^{(k)})
-\]
-to compute the \(Z_j^{(k+1)}\).
-
-Computation of the Guttman transform requires Moore-Penrose inverses of the
-matrices \(V_j\), which are of order \(n+k_j\) and extremely sparse. They can also be uncomfortably large because \(n\) can be large. It is much more memory-friendly to solve the partioned system
+To compute the Guttman transform of \(Z_j\) we have to solve
+the partitioned system
 \[
 \begin{bmatrix}
 R_W&-W\\
 -W'&C_W
 \end{bmatrix}
-\begin{bmatrix}X\\Y\end{bmatrix}=\begin{bmatrix}
+\begin{bmatrix}\tilde X\\\tilde Y\end{bmatrix}=
+\begin{bmatrix}
 R_B&-B\\
 -B'&C_B
 \end{bmatrix}
+\begin{bmatrix}X\\Y\end{bmatrix}
 \]
+Since we have to solve this system for each variable separately we forget about the index \(j\) here. In \ldots{} \(R_W\) and \(C_W\) are the diagonal matrices with row and column sums of \(-W\), while \(R_B\) and \(C_B\) are diagonal matrices with the row and columns sums of the \(n\times k_j\) matrix \(B\), which has elements
+\[
+b_{il}=w_{il}\frac{\hat d_{il}}{d(x_i,y_l)}
+\]
+Matrices \(X\) and \(Y\) are the two parts of the current \(Z\) that we are updating,
+while we solve for \(\tilde X\) and \(\tilde Y\), the two parts of the Guttman
+transform. Define
+\[
+\begin{bmatrix}
+P\\Q
+\end{bmatrix}:=
+\begin{bmatrix}
+R_B&-B\\
+-B'&C_B
+\end{bmatrix}
+\begin{bmatrix}X\\Y\end{bmatrix}
+\]
+Now
+\(R_W\tilde X-W\tilde Y=P\) or \(\tilde X=R_W^{-1}(P+W\tilde Y)\). Substitute this in \(C_W\tilde Y-W'\tilde X=Q\)
+to get \(C_W\tilde Y-W'R_W^{-1}(P+W\tilde Y)=Q\) or
+\[
+(C_W-W'R_W^{-1}W)\tilde Y=Q+W'R_W^{-1}P
+\]
+We solve \ldots{} for \(\tilde Y\) and then use \(\tilde X=R_W^{-1}(P+W\tilde Y)\).
+Note that \(C_W-W'R_W^{-1}W\) is doubly-centered and \(Q+W'R_W^{-1}P\) is column-centered. As in homogeneity analysis we hope that \(k_\star\)
+is not to big, and we avoid generalized inverses of very large and very
+sparse matrices.
 
-More explicitly we must minimize
-
+After computing the Guttman transforms \(\tilde X_j\) and \(\tilde Y_j\)\\
+we have to project them on the constrained configurations, in this
+case on the set \(X_j=X\). More explicitly we must minimize
 \begin{multline}
 \sum_{j=1}^m\text{tr}\ (X-\tilde X_j)'R_j(X-\tilde X_j)-2\sum_{j=1}^m\text{tr}\ (X-\tilde X_j)'W_j(Y_j-\tilde Y_j)+\\
 \sum_{j=1}^m\text{tr}\ (Y_j-\tilde Y_j)'C_j(Y_j-\tilde Y_j)
 \end{multline}
-where \(\tilde X_j\) and \(\tilde Y_j\) are the two components of the Guttman
-transform \(\tilde Z_j\) of the current \(Z_j\).
+where \(R_j\) and \(C_j\) are now the diagonal matrices of row and column sums of the
+\(-W_j\).
 
-First minimize over \(Y_j\) for given \(X\). This gives
+The stationary equations are
+\begin{align}
+Y_j&=\tilde Y_j-C_j^{-1}W_j'(X-\tilde X_j),\label{eq:stateq1}\\
+X&=\{W_\star\}^{-1}\sum_{j=1}^m\left\{R_j\tilde X_j-W_j(Y_j-\tilde Y_j)\right\}.\label{eq:stateq2}
+\end{align}
+We could solve these equations iteratively using alternating least squares. This
+means using \eqref{eq:stateq1} to compute a new \(Y\) for given \(X\) and \eqref{eq:stateq2} to compute a new \(X\) for given \(Y\). This introduces an
+infinite inner iteration loop within the main outer iteration loop. We have tried this, and it does not seem to be the way to go. The argument is the same as in
+our section \ldots{} on homogeneity analysis.
+
+Alternatively, we can substitute \eqref{eq:stateq2} into \eqref{eq:stateq1}. This
+gives linear equations in the \(Y_j\), which we can solve. Then use \eqref{eq:stateq2}
+to compute the corresponding optimal \(X\). No inner iterations are necessary.
+In the same way we can substitute \eqref{eq:stateq1} into \eqref{eq:stateq2}, solve for
+\(X\) and compute the corresponding \(Y_j\). Since in most applications the number of
+objects \(n\) is much larger than the total number of categories \(\sum k_j\) the first
+substitution of \eqref{eq:stateq2} into \eqref{eq:stateq1} seems the most
+promising. Again, the argument is the same as in
+our section \ldots{} on homogeneity analysis.
+
 \[
-Y_j=\tilde Y_j-\{V_{22}^j\}^{-1}V_{21}^j(X-\tilde X_j)
+C_j(Y_j-\tilde Y_j)-W_j'R_\star^{-1}\sum_{h=1}^mW_h(Y_h-\tilde Y_h)=W_j'(\tilde X_j-R_\star^{-1}\sum_{h=1}^mR_h\tilde X_h)
+\]
+
+\[
+(Y_j-\tilde Y_j)-\{V_{22}^j\}^{-1}V_{21}^j\{V_{11}^\star\}^{-1}\sum_{h=1}^mV_{12}^h(Y_h-\tilde Y_h)=\{V_{22}^j\}^{-1}V_{21}^j\tilde X_j-\{V_{22}^j\}^{-1}V_{21}^j\{V_{11}^\star\}^{-1}\sum_{h=1}^mV_{11}^h\tilde X_h
 \]
 \[
-X = \{V_{11}^\star\}^{-1}\sum_{j=1}^m\left\{V_{11}^j\tilde X_j-V_{12}^j(Y_j-\tilde Y_j)\right\}
+C_j(Y_j-\tilde Y_j)-W_j'R_\star^{-1}\sum_{h=1}^mW_h(Y_h-\tilde Y_h)=-W_j\tilde X_j+W_j'R_\star^{-1}\sum_{h=1}^mR_h\tilde X_h
 \]
-
-\[
-\sum_{j=1}^m V_{11}^j(X-\tilde X_j)+\sum_{j=1}^mV_{12}^j(Y_j-\tilde Y_j)= 0
-\]
-
-Or we substitute \ldots{} into \ldots{} we find that we have to minimize
-
-\[
-\sum_{j=1}^m\text{tr}\ (X-\tilde X_j)'(R_j-W_jC_j^{-1}W_j')(X-\tilde X_j)
-\]
-over \(X\).
 \#\# Missing Data
 
 \subsection{Normalization of X}\label{normalization-of-x}
@@ -448,42 +490,12 @@ X'H_j'V_jH_jX=X'\{V_{11}^j+V_{12}^jD_j^{-1}G_j+G_jD_j^{-1}V_{22}^jD_j^{-1}G_j'\}
 
 \subsection{Rank Constraints on Y}\label{rank-constraints-on-y}
 
+As in homals it is possble to impose rank-one restrictions on some or all of the \(Y_j\). This means we require
 \[
-y_j^r=\alpha_{j}^ry_j
+y_l^j=\alpha_{l}^jy_l^{\ }{}
 \]
-
-\section{Note}\label{note}
-
-In order to not have to deal with general inverses and multiplications of gigantic symmetric matrices with largely empty diagonal blocks we solve the system
-\[
-\begin{bmatrix}
-W_j&-W\\
--W'&W_c
-\end{bmatrix}
-\begin{bmatrix}
-X\\Y
-\end{bmatrix}
-=
-\begin{bmatrix}
-P\\Q
-\end{bmatrix}
-\]
-for \(X\) and \(Y\), with the known right hand side
-\[
-\begin{bmatrix}P\\Q\end{bmatrix}=
-\begin{bmatrix}
-B_j&-B\\
--B'&B_c
-\end{bmatrix}
-\begin{bmatrix}
-X^{(k)}\\Y^{(k)}
-\end{bmatrix}
-\]
-
-\(W_jX-WY=P\) or \(X=W_j^{-1}(P+WY)\). Substitute in \(W_cY-W'X=Q\)
-to get \(W_cY-W'W_j^{-1}(P+WY)=Q\) or \((W_c-W'W_j^{-1}W)Y=Q+W'W_j^{-1}P\).
-
-Note that \(W_c-W'W_j^{-1}W\) is doubly-centered and \(Q+W'W_j^{-1}P\) is column-centered.
+Geometrically having all \(y_l^j\) on a line through the origin implies that
+all voronoi boundaries are hyperplanes perpendicular to that line, and consequently all voronoi regions are bounded by two parallel hyperplanes.
 
 \section{Convergence and Degeneracy}\label{convergence-and-degeneracy}
 
@@ -510,14 +522,23 @@ Presenting examples runs into some difficulties.
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-deleeuw_C_23}
+De Leeuw, J. 1923. {``Deconstructing Multiple Correspondence Analysis. Essays in Honour of Shizuhiko Nishisato.''} In \emph{Analysis of Categorical Data from Historical Perspectives}, edited by Eric J. Beh, Rosaria Lombardo, and Jose G. Clavel, 383--407. Springer.
+
 \bibitem[\citeproctext]{ref-deleeuw_A_77}
-De Leeuw, J. 1977. {``Correctness of Kruskal's Algorithms for Monotone Regression with Ties.''} \emph{Psychometrika} 42: 141--44.
+---------. 1977. {``Correctness of Kruskal's Algorithms for Monotone Regression with Ties.''} \emph{Psychometrika} 42: 141--44.
+
+\bibitem[\citeproctext]{ref-deleeuw_C_14}
+---------. 2014. {``{History of Nonlinear Principal Component Analysis}.''} In \emph{{The Visualization and Verbalization of Data}}, edited by J. Blasius and M. Greenacre. Chapman; Hall.
 
 \bibitem[\citeproctext]{ref-deleeuw_mair_A_09a}
 De Leeuw, J., and P. Mair. 2009. {``{Homogeneity Analysis in {R}: the Package homals}.''} \emph{Journal of Statistical Software} 31 (4): 1--21. \url{https://www.jstatsoft.org/v31/i04/}.
 
+\bibitem[\citeproctext]{ref-gifi_B_80}
+Gifi, A. 1980. \emph{Niet-Lineaire Multivariate Analyse {[}Nonlinear Multivariate Analysis{]}}. Leiden, The Netherlands: Department of Data Theory FSW/RUL.
+
 \bibitem[\citeproctext]{ref-gifi_B_90}
-Gifi, A. 1990. \emph{Nonlinear Multivariate Analysis}. New York, N.Y.: Wiley.
+---------. 1990. \emph{Nonlinear Multivariate Analysis}. New York, N.Y.: Wiley.
 
 \bibitem[\citeproctext]{ref-heiser_deleeuw_A_79}
 Heiser, W. J., and J. De Leeuw. 1979. {``Metric Multidimensional Unfolding.''} \emph{Methoden En Data Nieuwsbrief SWS/VVS} 4: 26--50.
